# servectl

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
src/servectl/: __init__.py  __main__.py  app.py  cli.py  metrics.py  model.py
tests/: conftest.py  test_app.py  test_cli.py  test_model.py
