[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servectl"
version = "0.1.0"
description = "Serve a model file over HTTP with health and Prometheus metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "José del Río" }]
keywords = ["model-serving", "fastapi", "prometheus", "mlops", "inference", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "prometheus-client>=0.20",
    "joblib>=1.3",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/jmweb-org/servectl"
Repository = "https://github.com/jmweb-org/servectl"
Issues = "https://github.com/jmweb-org/servectl/issues"

[project.scripts]
servectl = "servectl.cli:entrypoint"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/servectl"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4", "RUF"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.run]
source = ["servectl"]
branch = true
